add colums and rows to html of places we have been
Co-authored-by: Tyler Sinks <tyler.sinks@gmail.com>
Co-authored-by: Amanda Otero <mandystar018@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
   <title>Places To Go!</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Places we have been and where we want to go!</h1>
+    <br>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Koh Tao, Thailand</h2>
+        <p id="thailand"></p>
+      </div>
+      <div class="col-md-6">
+        <h2>London, England</h2>
+        <p id="england"></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Wellington, New Zealand</h2>
+        <p id="newZealand"></p>
+      </div>
+      <div class="col-md-6">
+        <h2>Hoi An, Vietnam</h2>
+        <p id="vietnam"></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Table Rock Lake</h2>
+        <p id="arkansas"></p>
+      </div>
+      <div class="col-md-6">
+        <h2>Meramec Caverns</h2>
+        <p id="missouri"></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
